--- a/views/static/index.ejs
+++ b/views/static/index.ejs
@@ -1,1 +1,8 @@
-<h1> This is my homepage </h1>
+<div class="container text-center">
+  <div class="jumbotron">
+    <h1>Academic Staff Info Management</h1>
+
+    <h3>...Managing academic staffs better.</h3>
+    <a href="/user/new" class="btn btn-lg btn-success">Sign up now</a>
+  </div>
+</div>
