--- a/views/static/index.ejs
+++ b/views/static/index.ejs
@@ -2,7 +2,7 @@
   <div class="jumbotron">
     <h1>Academic Staff Info Management</h1>
 
-    <h3>...Managing academic staffs better.</h3>
-    <a href="/user/new" class="btn btn-lg btn-success">Sign up now</a>
+    <h2>...Managing academic staffs better.</h2>
+    <a href="/user/new" class="btn btn-lg btn-success">Sign up now!</a>
   </div>
 </div>
