--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/bootstrap.css">
+    <link rel="stylesheet" href="/styles/custom.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
@@ -46,8 +47,8 @@
 
     <div class="container">
       <hr>
-      <footer class="footer">
-        <div class="pull-right">
+      <footer class="footer pull-right">
+        <div>
           <a href="http://sailsjs.com/">sails.js</a>
           <div>sails tutorial</div>
         </div>
@@ -76,7 +77,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
