--- a/views/static/index.ejs
+++ b/views/static/index.ejs
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container">
   <div class="jumbotron">
     <h1>Academic Staff Info Management</h1>
 
