--- a/views/static/index.ejs
+++ b/views/static/index.ejs
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="jumbotron">
+  <div class="jumbotron top-bar">
     <h1>Academic Staff Info Management</h1>
 
     <h2>...Managing academic staffs better.</h2>
-    <a href="/user/new" class="btn btn-lg btn-success">Sign up now!</a>
+    <a href="/user/new" class="btn btn-lg btn-success">Sign in now!</a>
   </div>
 </div>
