--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,6 +1,14 @@
 <form action="/user/create" method="post" class="form-signin">
   <h2 class="form-signin-heading">Create an account</h2>
 
+  <% if (flash && flash.err){ %>
+    <ul class="alert alert-success">
+  <% Object.keys(flash.err).forEach(function(error){ %>
+    <l1><%- JSON.stringify(flash.err[error]) %></li>
+  <% }) %>
+    </ul>
+  <% } %>
+
   <div class="control-group">
     <input type="text" class="form-control" placeholder="your name" name="name">
   </div>
