--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -108,6 +108,9 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/jquery-1.11.3.min.js"></script>
     <script src="/js/dependencies/bootstrap.js"></script>
+    <script src="/js/dependencies/jquery.validate.min.js"></script>
+    <script src="/js/dependencies/validate.min.js"></script>
+    <script src="/js/customValidate.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
