--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -9,23 +9,23 @@
     </ul>
   <% } %>
 
-  <div class="control-group">
+  <div class="form-group">
     <input type="text" class="form-control" placeholder="your name" name="name">
   </div>
 
-  <div class="control-group">
+  <div class="form-group">
     <input type="text" class="form-control" placeholder="your title" name="title">
   </div>
 
-  <div class="control-group">
+  <div class="form-group">
     <input type="text" class="form-control" placeholder="email address" name="email">
   </div>
 
-  <div class="control-group">
+  <div class="form-group">
     <input type="password" class="form-control" placeholder="password" name="password" id="password">
   </div>
 
-  <div class="control-group">
+  <div class="form-group">
     <input type="password" class="form-control" placeholder="password confirmation" name="confirmation">
     <br/>
   </div>
