--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,4 +1,4 @@
-<form action="/user/create" method="post" class="form-signin">
+<form action="/user/create" method="post" id="sign-up-form" class="form-signin">
   <h2 class="form-signin-heading">Create an account</h2>
 
   <% if (flash && flash.err){ %>
@@ -17,7 +17,7 @@
     <input type="text" class="form-control" placeholder="your title" name="title">
   </div>
 
-  <div class="form-group">
+  <div class="formgroup">
     <input type="text" class="form-control" placeholder="email address" name="email">
   </div>
 
