--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -20,12 +20,31 @@ body {
   background-size: cover;
 }
 
-.container .gray {
-  color: gray;
+.container .footer {
+  width: 25%;
 }
 
-.container {
-  .footer {
-    width: 25%;
-  }
+.form-signin {
+    max-width: 35%;
+    padding: 19px 29px 29px;
+    margin: 0 auto 20px;
+    margin-top: 20px;
+    background-color: lightgray;
+    border: 2px solid lightgreen;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;    
+}
+
+.form-signin h2 {
+    text-align: center;
+    margin-top: 0px;
+}
+
+.form-signin input[type="text"],
+.form-signin input[type="password"] {
+    font-size: 16px;
+    height: auto;
+    margin-bottom: 15px;
+    padding: 7px 9px;
 }
