Minor class fix

--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -30,6 +30,6 @@
     <br/>
   </div>
 
-  <input type="submit" class="btn btn-lg btn-primary btn-black" value="Create Account"/>
+  <input type="submit" class="btn btn-lg btn-primary btn-block" value="Create Account"/>
   <input type="hidden" name="_csrf" value="<%= _csrf %>"/>
 </form>
